--- a/basiswebsite/index.html
+++ b/basiswebsite/index.html
@@ -94,9 +94,12 @@
 
 		<section class="form">
 			<h3>Gratis website tip</h3>
-			<h4>Klaar om te groeien?</h4>
-			<a>Aanvragen</a>
-			<!--2 forms-->
+			<h4>Meld je nu aan!</h4>
+			<form action="">
+				<input class="" type="text" placeholder="Website URL" required>
+				<input class="" type="text" placeholder="E-mail" required>
+				<a href="#">Aanvragen</a>
+			</form>
 		</section>
 
 		<section class="diensten">
