--- a/basiswebsite/index.html
+++ b/basiswebsite/index.html
@@ -19,15 +19,16 @@
 	<header>
 		<nav>
 			<ul class='nav-bar'>
-				<li class='logo'><a href='#'><img src='./images/digital-bean-logo.png' /></a></li>
+				<li class='logo'><a href='#'><img src='./images/digital-bean-logo.png'
+							alt="Het logo van Digital Bean" /></a></li>
 				<input type='checkbox' id='check' />
 				<span class="menu">
-					<li><a href="">Online Marketing</a></li>
-					<li><a href="">Website laten maken</a></li>
-					<li><a href="">Tracking</a></li>
-					<li><a href="">Blog</a></li>
-					<li><a href="">Over ons</a></li>
-					<li><a href="">Contact</a></li>
+					<li><a href="#">Online Marketing</a></li>
+					<li><a href="#">Website laten maken</a></li>
+					<li><a href="#">Tracking</a></li>
+					<li><a href="#">Blog</a></li>
+					<li><a href="#">Over ons</a></li>
+					<li><a href="#">Contact</a></li>
 					<label for="check" class="close-menu"><i class="fas fa-times"></i></label>
 				</span>
 				<label for="check" class="open-menu"><i class="fas fa-bars"></i></label>
@@ -42,7 +43,7 @@
 				<!--hgroup van maken, button wordt a en moet in p-->
 				<h1>Jouw online marketing partner</h1>
 				<p>Digital Bean helpt jouw online zichtbaar te worden en als bedrijf te groeien</p>
-				<a>Begin vandaag nog!</a>
+				<a href="#">Begin vandaag nog!</a>
 				<!--img met de alt text aan einde van de content om een beeld te schetsen-->
 			</section>
 
@@ -89,7 +90,7 @@
 					Klik op de knop hieronder om een vrijblijvende bel-afspraak in te plannen. </p>
 			</section>
 
-			<img src="images/slider_v1_boy_right_side.png" alt="">
+			<img src="images/slider_v1_boy_right_side.png" alt="Jongere man die kijkt naar grafieken en tabellen">
 		</section>
 
 		<section class="form">
@@ -105,57 +106,26 @@
 		<section class="diensten">
 			<h3>Waar kunnen we jou mee helpen?</h3>
 			<h4>Digital Bean's Diensten</h4>
-			<a><img src="images/icon-1.png" alt="">Online Marketing</a>
-			<a><img src="images/icon-1.png" alt="">Online Marketing</a>
-			<a><img src="images/icon-1.png" alt="">Online Marketing</a>
-			<a><img src="images/icon-1.png" alt="">Online Marketing</a>
-			<a><img src="images/icon-1.png" alt="">Online Marketing</a>
-			<a><img src="images/icon-1.png" alt="">Online Marketing</a>
-			<a><img src="images/icon-1.png" alt="">Online Marketing</a>
+			
+			<ul>
+				<li><a><img src="images/icon-1.png" alt="">Online Marketing</a></li>
+				<li><a><img src="images/icon-1.png" alt="">Online Marketing</a></li>
+				<li><a><img src="images/icon-1.png" alt="">Online Marketing</a></li>
+				<li><a><img src="images/icon-1.png" alt="">Online Marketing</a></li>
+				<li><a><img src="images/icon-1.png" alt="">Online Marketing</a></li>
+				<li><a><img src="images/icon-1.png" alt="">Online Marketing</a></li>
+			</ul>
 
 			<h5>Online Marketing</h5>
 			<p>Ben jij op zoek naar een complete online marketing aanpak? We helpen jou graag om alles uit jouw
-				website
-				te halen.
-
-				Mis de klanten die jij online kan bereiken niet!</p>
+				website te halen. Mis de klanten die jij online kan bereiken niet!</p>
 			<a>Meer informatie</a>
-		</section>
-
-		<section class="werkproces">
-			<h3>Het werkproces</h3>
-			<p>Altijd in beweging en zoeken naar kansen</p>
-			<!--lijst van maken-->
-			<a href="">
-				<h4></h4>
-			</a>
-			<a href="">
-				<h4></h4>
-			</a>
-			<a href="">
-				<h4></h4>
-			</a>
-			<a href="">
-				<h4></h4>
-			</a>
-			<a href="">
-				<h4></h4>
-			</a>
-			<a href="">
-				<h4></h4>
-			</a>
-			<a href="">
-				<h4></h4>
-			</a>
-			<a href="">
-				<h4></h4>
-			</a>
 		</section>
 	</main>
 
 	<footer>
 		<!--address ipv section gebruiken-->
-		<section>
+		<addres>
 			<!--heeft nog een heading nodig (alle sections)-->
 			<!--IMG van Seacify-->
 			<!--IMG van locatie pin-->
@@ -166,7 +136,7 @@
 			<p>009-215-5596
 				info@example.com
 			</p>
-		</section>
+		</addres>
 
 		<section>
 			<h5>Bedrijfsinformatie</h5>
